--- a/po/pot/help.pot
+++ b/po/pot/help.pot
@@ -1,8 +1,3 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 #, fuzzy
 msgid ""
 msgstr ""
@@ -12,103 +7,10 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../usr/lib/ddm/ddm.py:46 ../usr/lib/ddm/main.py:31
-#: ../usr/share/kde4/services/kcm_device_driver_manager.desktop.in.h:1
-#: ../usr/share/applications/ddm.desktop.in.h:1
-msgid "Device Driver Manager"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:47 ../usr/lib/ddm/ddm.py:157
-msgid "Install"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:48
-msgid "Help"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:49
-msgid "Quit"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:110
-msgid "No internet connection"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:111
-msgid ""
-"You need an internet connection to install the additional software.\n"
-"Please, connect to the internet and try again."
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:157
-msgid "Device"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:173
-msgid "Remove kernel"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:174
-msgid ""
-"You cannot remove a booted kernel.\n"
-"Please, boot another kernel and try again."
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:195
-msgid "Hardware scan"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:199
-msgid "There are no available drivers for your hardware:"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:205
-msgid "DDM did not find any supported hardware."
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:253
-msgid "Saved"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:254
-msgid "You will need to restart your system."
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:467
-msgid "PAE capable system"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:578
-msgid ""
-"There was an error during the installation.\n"
-"Please, run 'sudo apt-get -f install' in a terminal.\n"
-"Visit our forum for support: http://forums.solydxk.com"
-msgstr ""
-
-#: ../usr/lib/ddm/ddm.py:587
-msgid "The software has been successfully installed."
-msgstr ""
-
-#: ../usr/lib/ddm/main.py:32
-msgid ""
-"Device Driver Manager cannot be started in a live environment\n"
-"You can use the --force argument to start DDM in a live environment"
-msgstr ""
-
-#: ../usr/lib/ddm/main.py:74
-msgid "Unexpected error"
-msgstr ""
-
-#: ../usr/lib/ddm/main.py:75
-msgid ""
-"DDM has failed with the following unexpected error. Please submit a bug "
-"report!"
-msgstr ""
+"X-Generator: Translate Toolkit 1.12.0\n"
 
 #: en/help.html+html.body.h1:8
 msgid "Device Driver Manager Help"
@@ -220,6 +122,6 @@ msgstr ""
 
 #: en/help.html+html.body.div.p:41
 msgid ""
-"Please, attach your log file when you post an issue on our forum: <a href="
-"\"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
+"Please, attach your log file when you post an issue on our forum: <a href=\""
+"http://forums.solydxk.com\" target=\"_blank\">http://forums.solydxk.com</a>"
 msgstr ""
