--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+ddm (2.2.0) debian; urgency=low
+
+  * Added support for Radeon R and FirePro/Gl series
+  * Added support for backports
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Fri, 30 Oct 2015 11:00:00 +0100
+
+ddm (2.1.8) debian; urgency=low
+
+  * Can now find help.html
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 28 Oct 2015 16:00:00 +0100
+
 ddm (2.1.7) debian; urgency=low
 
   * Updated Broadcom drivers list
